add connective-v-rxjs docs

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ b.send('world!');</code>
 
 <!---------- QUICK-DIVE : SERIAL TO/FROM ---------->
 
-<h3 id="serial">Serial connections</h3>
+<h3 id="serial" skip-toc>Serial connections</h3>
 
 You can also connect series of pins to each other using <span code>.serialTo()</span>
 and <span code>.serialFrom()</span> methods:
@@ -249,7 +249,7 @@ simultaenously using <span code>group()</span>.
 
 <!---------- QUICK-DIVE : SUBSCRIBE ---------->
 
-<h3 id="subscribe">Subscribing</h3>
+<h3 id="subscribe" skip-toc>Subscribing</h3>
 
 You can directly subscribe on any <i>Pin</i> using its <a href="/docs/pin#subscribe"><span code>.subscribe()</span></a> method, so you don't need to use <span code>sink()</span> all the time.
 You can also use <a href="/docs/group"><span code>group()</span></a> to work with a multitude of <i>Pins</i> at once:
@@ -292,7 +292,7 @@ console.log('A:: ' + a.locked + ' B:: ' + b.locked);
 
 <!---------- QUICK-DIVE : OTHER SOURCES ---------->
 
-<h3 id="other-sources">Sources</h3>
+<h3 id="other-sources" skip-toc>Sources</h3>
 
 You can also create sources from plain values or from <i>Observables</i>:
 
@@ -311,7 +311,7 @@ Note that you cannot connect any pin to <a href="/docs/wrap"><span code>wrap()</
 
 <!---------- QUICK-DIVE : SPREAD ---------->
 
-<h3 id="spread">Spread</h3>
+<h3 id="spread" skip-toc>Spread</h3>
 
 You can use <a href="/docs/spread"><span code>spread()</span></a> to turn incoming values into multiple emissions:
 
@@ -325,7 +325,7 @@ value([1, 2, 3, 4, 5, 6])
 
 <!---------- QUICK-DIVE : FILTER & MAP ---------->
 
-<h3 id="filter-n-map">Filter & Map</h3>
+<h3 id="filter-n-map" skip-toc>Filter & Map</h3>
 
 You can change incoming values using <a href="/docs/map"><span code>map()</span></a>, and let them through or block them using
 <a href="/docs/filter"><span code>filter()</span></a>:
@@ -342,7 +342,7 @@ value([1, 2, 3, 4, 5, 6])
 
 <!---------- QUICK-DIVE : CONTROL ---------->
 
-<h3 id="control">Control</h3>
+<h3 id="control" skip-toc>Control</h3>
 
 You can break your flow into multiple branches and join them back using <a href="/docs/control"><span code>control()</span></a>:
 
@@ -361,7 +361,7 @@ value([1, 2, 3, 4, 5, 6])
 
 <!---------- QUICK-DIVE : LOOP ---------->
 
-<h3 id="loop">Loops</h3>
+<h3 id="loop" skip-toc>Loops</h3>
 
 You can even create loops in your flow:
 
@@ -381,7 +381,7 @@ a.send(0);</code>
 
 <!---------- QUICK-DIVE : PIPE ---------->
 
-<h3 id="pipe">Pipe</h3>
+<h3 id="pipe" skip-toc>Pipe</h3>
 
 In the example above, the order is not necessarily preserved. You can for example enforce the order by using
 <b>RxJS</b>'s <span code>delay()</span> operator:
@@ -412,7 +412,7 @@ also be of that type.
 
 <!---------- QUICK-DIVE : COMPOSITION ---------->
 
-<h3 id="composition">Composition</h3>
+<h3 id="composition" skip-toc>Composition</h3>
 
 You can re-use parts of your reactive flows using
 <a href="/docs/composition"><span code>composition()</span></a>:
@@ -468,7 +468,7 @@ e.out('odd');</code></pre>
 <br><br>
 
 <!---------- QUICK-DIVE : AGENT ---------->
-<h3 id="agent">Agent</h3>
+<h3 id="agent" skip-toc>Agent</h3>
 
 Compositions are sub-classes of
 <a href="/docs/agent">Agent</a>
@@ -484,7 +484,7 @@ denote the possible names of the incoming and outgoing pins of the Agent.
 <br><br>
 
 <!---------- QUICK-DIVE : EXPR ---------->
-<h3 id="expr">Expr</h3>
+<h3 id="expr" skip-toc>Expr</h3>
 
 <a href="/docs/expr"><span code>expr()</span></a> allows you to convert any function into an agent:
 
@@ -520,7 +520,7 @@ e.result; //--> this is the result of the expression.</code></pre>
 <br><br>
 
 <!---------- QUICK-DIVE : NODE ---------->
-<h3 id="node">Node</h3>
+<h3 id="node" skip-toc>Node</h3>
 A <a href="/docs/node">Node</a>
 is basically a more complex version of an Expr, allowing you to emit to any outputs denoted in the signature
 (instead of just <span code>"result"</span> pin). You can create nodes easily using <span code>node()</span> function:
@@ -572,7 +572,7 @@ a.send(5);</code>
 </pre>
 
 <!---------- QUICK-DIVE : GATE ---------->
-<h3 id="gate">Gate</h3>
+<h3 id="gate" skip-toc>Gate</h3>
 
 You can control when some emission passes through using <a href="/docs/gate"><span code>gate()</span></a>
 
@@ -605,7 +605,7 @@ the behavior of the agent.
 <br><br>
 
 <!---------- QUICK-DIVE : STATE ---------->
-<h3 id="state">State</h3>
+<h3 id="state" skip-toc>State</h3>
 You can keep reactive state values within your flows using <a href="/docs/state"><span code>state()</span></a>. For example, the following code
 introduces a composition that represents the state of a <i>html input</i>, which is built on top of
 <span code>state()</span>,
@@ -644,7 +644,7 @@ b.bind();</code>
 </pre>
 
 <!---------- QUICK-DIVE : SEQUENCE ---------->
-<h3 id="sequence">Sequence</h3>
+<h3 id="sequence" skip-toc>Sequence</h3>
 
 The <a href="/docs/sequence"><span code>sequence()</span></a> agent allows you to distinguish specific sequences of events
 coming from various sources:
@@ -670,7 +670,7 @@ group(
 
 <!---------- QUICK-DIVE : MEMORY ---------->
 
-<h3 id="memory">Memory Management</h3>
+<h3 id="memory" skip-toc>Memory Management</h3>
 
 All pins and agents in <b>CONNECTIVE</b> come with a <span code>.clear()</span> method that will dispose
 all of their internal references. The <span code>.clear()</span> method of a <i>Composition</i> will also
@@ -732,6 +732,7 @@ You can find more details about memory management in <b>CONNECTIVE</b> <a href="
 
 
 <br><br>
+<br><br>
 
 <h1 id="under-the-hood">Under the Hood</h1>
 
@@ -756,6 +757,26 @@ you would definitely need to be familiar with <b>RxJS</b>.
 
 You can read more in detail on how <b>CONNECTIVE</b> creates observable sequences based on your flows
 <a href="/docs/under-the-hood">here</a>.
+
+<br><br>
+<br><br>
+
+<h1 id="connective-v-rxjs">CONNECTIVE v RxJS</h1>
+
+An important thing to notice is that <b>CONNECTIVE</b> is designed NOT as an alternative
+to <b>RxJS</b>. It is rather meant to act as a <i>complement to <b>RxJS</b></i> specifically in the following
+ways:
+
+<ul>
+<li>It allows description of a reactive flow in any order,</li>
+<li>It provides a different model of reactive flows,</li>
+<li>It provides standard abstractions for flow re-use.</li>
+</ul>
+
+<br><br>
+
+This simply means that for smaller and simpler flows, the difference between the two is negligble. However the benefits of <b>CONNECTIVE</b> become more and more pronounced over larger and more complex reactive flows. 
+You can read more about this <a href="/docs/connective-v-rxjs">in this entry</a>.
 
 <br><br>
 <br><br>
@@ -856,7 +877,7 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
 
     <br><br>
 
-    <h3>Advanced</h3>
+    <h3>Misc.</h3>
     <a href="/docs/memory">Memory management</a>
     <hr>
     <a href="/docs/emission">Emission and context</a>
@@ -864,6 +885,8 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <a href="/docs/interfaces">Interfaces & Types</a>
     <hr>
     <a href="/docs/under-the-hood">Under the hood</a>
+    <hr>
+    <a href="/docs/connective-v-rxjs">CONNECTIVE v RxJS</a>
 
   </div>
   <div class="search">
