--- a/404.html
+++ b/404.html
@@ -137,7 +137,7 @@
 
     <br><br>
 
-    <h3>Advanced</h3>
+    <h3>Misc.</h3>
     <a href="/docs/memory">Memory management</a>
     <hr>
     <a href="/docs/emission">Emission and context</a>
@@ -145,6 +145,8 @@
     <a href="/docs/interfaces">Interfaces & Types</a>
     <hr>
     <a href="/docs/under-the-hood">Under the hood</a>
+    <hr>
+    <a href="/docs/connective-v-rxjs">CONNECTIVE v RxJS</a>
 
   </div>
   <div class="search">
