--- a/index.html
+++ b/index.html
@@ -875,7 +875,11 @@ You can read more about this <a href="/docs/connective-v-rxjs">in this entry</a>
     <hr>
     <a href="/docs/state">state</a>
     <hr>
+    <a href="/docs/sampler">sampler</a>
+    <hr>
     <a href="/docs/gate">gate</a>
+    <hr>
+    <a href="/docs/check">check</a>
     <hr>
     <a href="/docs/handle-error">handleError</a>
     <hr>
