--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ It enables declarative creation of large and complex data/event flows and encour
 <br><br>
 
 A <i>Hellow World!</i> example:
-<pre try="https://stackblitz.com/edit/connective-hellow-world">
+<pre try="https://stackblitz.com/edit/connective-hellow-world" 
+      preview="https://connective-hellow-world.stackblitz.io">
 <code class="javascript">/*!*/import { wrap, map, filter } from '@connectv/core';
 import { fromEvent } from 'rxjs';
 
@@ -74,7 +75,8 @@ let p = document.getElementById('p');
 </pre>
 
 A more elaborate example:
-<pre try="https://stackblitz.com/edit/connective-sample-fib">
+<pre try="https://stackblitz.com/edit/connective-sample-fib" 
+    preview="https://connective-sample-fib.stackblitz.io">
 <code class="javascript">/*!*/import { wrap, pipe, map, filter, sink } from '@connectv/core';
 import { fromEvent, timer } from 'rxjs';
 import { delay, debounceTime } from 'rxjs/operators';
