--- a/index.html
+++ b/index.html
@@ -877,6 +877,8 @@ You can read more about this <a href="/docs/connective-v-rxjs">in this entry</a>
     <hr>
     <a href="/docs/state">state</a>
     <hr>
+    <a href="/docs/deep">deep states</a>
+    <hr>
     <a href="/docs/sampler">sampler</a>
     <hr>
     <a href="/docs/gate">gate</a>
